# perceptron

./: .gitignore
cpp/: CMakeLists.txt  perceptron.cpp  perceptron.h  perceptron_test.cpp
java/: Perceptron.java  PerceptronTest.java
python3/: perceptron.py  perceptron_test.py
ruby/: perceptron.rb  perceptron_test.rb
